[gd_scene load_steps=10 format=3 uid="uid://b1cyfyi4lveqm"]

[ext_resource type="Script" uid="uid://doffq743c15ql" path="res://ReserveAssets/ComputerUI#2/Computer UI/computer_u_il.gd" id="1_f8qag"]
[ext_resource type="Texture2D" uid="uid://bvrjpfw7mpg4f" path="res://ReserveAssets/ComputerUI#2/Computer UI/Low Poly computer bg.jpg" id="2_y3ccq"]
[ext_resource type="Texture2D" uid="uid://w7bksikq1rho" path="res://ReserveAssets/ComputerUI#2/Computer UI/Folder icon.png" id="3_qp7lk"]
[ext_resource type="Texture2D" uid="uid://begh5p8w8wms0" path="res://ReserveAssets/ComputerUI#2/Computer UI/Antivirus icon.png" id="4_2ymw5"]
[ext_resource type="Texture2D" uid="uid://c7y4chf0hkus7" path="res://ReserveAssets/ComputerUI#2/Computer UI/Settings icon.png" id="5_y3ccq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q0vkn"]
texture = ExtResource("2_y3ccq")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q0vkn"]
resource_local_to_scene = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q0vkn"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yokx"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f8qag")

[node name="Backgroun_image" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_q0vkn")

[node name="Folder_icon" type="Sprite2D" parent="."]
position = Vector2(213, 259)
scale = Vector2(0.101942, 0.094979)
texture = ExtResource("3_qp7lk")

[node name="My Files" type="Label" parent="Folder_icon"]
offset_left = -196.191
offset_top = 221.102
offset_right = 244.809
offset_bottom = 377.102
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 114
text = "My Files"

[node name="Folder_Button" type="Button" parent="Folder_icon"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -235.429
offset_top = -450.044
offset_right = 276.571
offset_bottom = 120.956
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_q0vkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_q0vkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3yokx")
theme_override_styles/normal = SubResource("StyleBoxFlat_3yokx")

[node name="AntivirusIcon" type="Sprite2D" parent="."]
position = Vector2(215, 340)
scale = Vector2(0.102, 0.0945)
texture = ExtResource("4_2ymw5")

[node name="AntiVirus" type="Label" parent="AntivirusIcon"]
offset_left = -225.49
offset_top = 285.714
offset_right = 215.51
offset_bottom = 441.714
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 114
text = "AntiVirus"

[node name="AntiVirus_Button" type="Button" parent="AntivirusIcon"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -472.0
offset_right = 275.0
offset_bottom = 174.0
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_q0vkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_q0vkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3yokx")
theme_override_styles/normal = SubResource("StyleBoxFlat_3yokx")

[node name="Settings" type="Sprite2D" parent="."]
position = Vector2(216, 422)
scale = Vector2(0.085, 0.084)
texture = ExtResource("5_y3ccq")

[node name="Settings" type="Label" parent="Settings"]
offset_left = -223.529
offset_top = 273.81
offset_right = 217.471
offset_bottom = 429.81
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 114
text = "Settings"

[node name="Settings_Button" type="Button" parent="Settings"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -512.0
offset_right = 259.0
offset_bottom = 178.0
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_q0vkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_q0vkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3yokx")
theme_override_styles/normal = SubResource("StyleBoxFlat_3yokx")

[connection signal="pressed" from="Folder_icon/Folder_Button" to="." method="_on_folder_button_pressed"]
[connection signal="pressed" from="AntivirusIcon/AntiVirus_Button" to="." method="_on_anti_virus_button_pressed"]
[connection signal="pressed" from="Settings/Settings_Button" to="." method="_on_settings_button_pressed"]
