extends Control

func _on_folder_button_pressed() -> void:
	print("Folder pressed")#Check if the file icon is clickable
	#get_tree().change_scene_to_file("")

func _on_anti_virus_button_pressed() -> void:
	print("AntiVirus pressed")#Check if the antivirus icon is clickable
	#get_tree().change_scene_to_file("")

func _on_settings_button_pressed() -> void:
	print("Settings pressed")#Check if the settings icon is clickable
	#get_tree().change_scene_to_file("")
